Fixed some bugs, added properties file